[package]
name = "redis_server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
crc16 = "0.4"
hex = "0.4.3"
log = { path = "../log" }
rand = "0.9.1"
redis_cmd = { path = "../redis-cmd" }
redis_resp = { path = "../redis-resp" }
rustls = { version = "0.23.28" }
uuid = { version = "1.16.0", features = ["v4"] }
